# grpc_video

./: pyproject.toml
api/: config.py  main.py  resources.py  schemas.py
api/proto/: fake_personal_pb2.py  fake_personal_pb2.pyi  fake_personal_pb2_grpc.py
api/routers/: fake_personal.py
fake_personal/: config.py  main.py
fake_personal/adapters/: fake_personal.py
fake_personal/proto/: fake_personal_pb2_grpc.py
frontend/: index.html  script.js
proto/: fake_personal.proto
